CHANGES IN VERSION 1.10.1 (Bioconductor 3.11)
-------------------------

    o Remove transcripts ids from uniprot data in TransGeneID


CHANGES IN VERSION 1.9.1 (Bioconductor 3.11)
-------------------------

    o Turn off the Depmap analysis in vignettes because it's time consuming
    o Use count in EnrichedView when NES is not available


CHANGES IN VERSION 1.8.1 (Bioconductor 3.11)
-------------------------

    o Update the standard gene names
    o Debug the color issue in the ScatterView
    o Remove the usage of scale_color_npg and data.table::melt from the DensitiView
    o Remove nPerm parameter from the enrich.GSE
    o Download GO-gene relationship from NCBI ftp folder
    o Move multiple imports to suggests
    o Replace view_allpath with pathview.top in FluteMLE to allow users
      to set the number of pathways for pathview visualization.



CHANGES IN VERSION 1.7.3 (Bioconductor 3.11)
-------------------------

    o Fix the GeneRatio and BackgroundRatio issue in enrich.HGT
    o Fix the pvalueCutoff issue in EnrichAnalyzer
    o Remove the inpropriate description of RRA score in FACS-based screens (ReadRRA)
    o Revise the pvalue to be FDR in documentations.


CHANGES IN VERSION 1.7.2 (Bioconductor 3.11)
-------------------------

    o Allow user customized data input.
    o Prioritize the documentation.

CHANGES IN VERSION 1.6.4 (Bioconductor 3.10)
-------------------------

    o Config Travis CI test.
    o Download Depmap data automatically and save as rdata.

CHANGES IN VERSION 1.6.3 (Bioconductor 3.10)
-------------------------

    o Download GO terms from source database.
    o Use human genes to do enrichment analaysis in pipelines.
    o Revise BatchRemove to have the same parameters as paper mentioned.
    o Revise FluteRRA to surport only gene summary as input.

CHANGES IN VERSION 1.6.2 (Bioconductor 3.10)
-------------------------

    o Debug Depmap data loading process

CHANGES IN VERSION 1.6.1 (Bioconductor 3.10)