@@ -16,6 +16,7 @@ export(GSEA)
 export(HeatmapView)
 export(IdentBarView)
 export(IncorporateDepmap)
+export(LoadDepmap)
 export(MAView)
 export(MapRatesView)
 export(NormalizeBeta)
