@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/ResembleDepmap.R
+% Please edit documentation in R/IncorporateDepmap.R
 \docType{methods}
 \name{ResembleDepmap}
 \alias{ResembleDepmap}
